--- a/logging_calibr/lcmainwindow.ui
+++ b/logging_calibr/lcmainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>24</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -46,7 +46,6 @@
      <string>&amp;Wavelet</string>
     </property>
     <addaction name="actionWavelet"/>
-    <addaction name="actionTimeDepthCurve"/>
    </widget>
    <widget class="QMenu" name="menuTD">
     <property name="title">
@@ -54,8 +53,14 @@
     </property>
     <addaction name="actionUpdate_TD"/>
    </widget>
+   <widget class="QMenu" name="menu_Well">
+    <property name="title">
+     <string>&amp;Well</string>
+    </property>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menu_View"/>
+   <addaction name="menu_Well"/>
    <addaction name="menuData"/>
    <addaction name="menuTD"/>
    <addaction name="menuTools"/>
