--- a/logging_calibr/lcxorcontainer.ui
+++ b/logging_calibr/lcxorcontainer.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>LCXorContainer</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -75,7 +75,7 @@
        </widget>
       </item>
       <item row="1" column="3">
-       <widget class="QPushButton" name="_apply_pushbutton">
+       <widget class="QPushButton" name="_lag_apply_pushbutton">
         <property name="text">
          <string>Apply</string>
         </property>
@@ -107,5 +107,25 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>_lag_apply_pushbutton</sender>
+   <signal>clicked()</signal>
+   <receiver>LCXorContainerUi</receiver>
+   <slot>lagApplaySlot()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>557</x>
+     <y>266</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>325</x>
+     <y>199</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>lagApplaySlot()</slot>
+ </slots>
 </ui>
